--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="aivie.developer.aivie.ui.home.HomeFragment"
+        android:name="aivie.developer.aivie.ui.home.HomeUserFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
