Refactor and rename for Dashboard fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="aivie.developer.aivie.ui.dashboard.DashboardFragment"
+        android:name="aivie.developer.aivie.ui.dashboard.DashboardUserFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard_user" />
 
     <fragment
         android:id="@+id/navigation_notifications"
