--- a/app/src/main/res/navigation/mobile_navigation_user.xml
+++ b/app/src/main/res/navigation/mobile_navigation_user.xml
@@ -7,25 +7,25 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="aivie.developer.aivie.ui.home.HomeUserFragment"
+        android:name="aivie.developer.aivie.ui.user.home.HomeUserFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home_user" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="aivie.developer.aivie.ui.profile.ProfileUserFragment"
+        android:name="aivie.developer.aivie.ui.user.profile.ProfileUserFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile_user" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="aivie.developer.aivie.ui.dashboard.DashboardUserFragment"
+        android:name="aivie.developer.aivie.ui.user.dashboard.DashboardUserFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard_user" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="aivie.developer.aivie.ui.notifications.NotificationsUserFragment"
+        android:name="aivie.developer.aivie.ui.user.notifications.NotificationsUserFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications_user" />
 </navigation>
