Implement display patient list in viewFrag

--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -30,9 +30,9 @@
     </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_management"
         android:name="aivie.developer.aivie.ui.adm.management.ManagementFragment"
-        android:label="@string/menu_gallery"
+        android:label="Management"
         tools:layout="@layout/fragment_management_adm" />
 
     <fragment
