Rename fragment title

--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/nav_management"
         android:name="aivie.developer.aivie.ui.adm.management.ManagementFragment"
-        android:label="Management"
+        android:label="Patient Management"
         tools:layout="@layout/fragment_management_adm" />
 
     <fragment
