--- a/app/src/main/res/layout/activity_ethnicity.xml
+++ b/app/src/main/res/layout/activity_ethnicity.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/textViewEthnicity">
 
         <RadioButton
-            android:id="@+id/radioButtonWhite"
+            android:id="@+id/radioButtonH"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -39,7 +39,7 @@
             android:text="@string/ethnicity_hispanic_latino" />
 
         <RadioButton
-            android:id="@+id/radioButtonAsian"
+            android:id="@+id/radioButtonN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
