--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -39,7 +39,8 @@
                 android:enabled="true"
                 android:hint="@string/subject_number"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,7 +68,8 @@
                 android:focusable="false"
                 android:hint="@string/eIcf"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -95,7 +97,8 @@
                 android:focusable="false"
                 android:hint="@string/eIcf_signed"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <View
@@ -130,7 +133,8 @@
                 android:ems="10"
                 android:enabled="true"
                 android:hint="@string/prompt_create_last_name"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -158,7 +162,8 @@
                 android:ems="10"
                 android:enabled="true"
                 android:hint="@string/prompt_create_first_name"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -187,7 +192,8 @@
                 android:ems="10"
                 android:enabled="true"
                 android:hint="@string/prompt_create_display_name"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -214,7 +220,8 @@
                 android:focusable="false"
                 android:hint="@string/yyyy_MM_dd"
                 android:importantForAutofill="no"
-                android:inputType="date" />
+                android:inputType="date"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -242,7 +249,8 @@
                 android:focusable="false"
                 android:hint="@string/age"
                 android:importantForAutofill="no"
-                android:inputType="number" />
+                android:inputType="number"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <View
@@ -277,7 +285,8 @@
                 android:enabled="true"
                 android:hint="@string/gender"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -304,7 +313,8 @@
                 android:enabled="true"
                 android:hint="@string/ethnicity"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -332,7 +342,8 @@
                 android:focusable="false"
                 android:hint="@string/race"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <TextView
