--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -36,7 +36,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/subject_number"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
@@ -64,7 +64,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/eIcf"
                 android:importantForAutofill="no"
@@ -93,7 +93,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/eIcf_signed"
                 android:importantForAutofill="no"
@@ -105,7 +105,7 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:background="?android:attr/listDivider" />
 
@@ -131,7 +131,7 @@
                 android:layout_weight="1"
                 android:autofillHints="name"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/prompt_create_last_name"
                 android:inputType="textPersonName"
                 android:textSize="14sp" />
@@ -160,13 +160,12 @@
                 android:layout_weight="1"
                 android:autofillHints="name"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/prompt_create_first_name"
                 android:inputType="textPersonName"
                 android:textSize="14sp" />
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -190,7 +189,7 @@
                 android:layout_weight="1"
                 android:autofillHints="name"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/prompt_create_display_name"
                 android:inputType="textPersonName"
                 android:textSize="14sp" />
@@ -218,6 +217,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:focusable="false"
+                android:enabled="false"
                 android:hint="@string/yyyy_MM_dd"
                 android:importantForAutofill="no"
                 android:inputType="date"
@@ -245,7 +245,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/age"
                 android:importantForAutofill="no"
@@ -257,7 +257,7 @@
             android:id="@+id/divider2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:background="?android:attr/listDivider" />
 
@@ -282,7 +282,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/gender"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
@@ -310,7 +310,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:hint="@string/ethnicity"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
@@ -338,7 +338,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/race"
                 android:importantForAutofill="no"
