--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/eIcf"
                 android:importantForAutofill="no"
@@ -103,7 +103,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:focusable="false"
                 android:hint="@string/eIcf_signed"
                 android:importantForAutofill="no"
