--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -11,10 +11,10 @@
 
 
     <RelativeLayout
+        android:id="@+id/signature_pad_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/buttons_container"
-        android:id="@+id/signature_pad_container">
+        android:layout_above="@id/checkBoxUserAgreement">
 
         <View
             android:id="@+id/divider_underline"
@@ -24,29 +24,21 @@
             android:layout_marginBottom="16dp"
             android:background="@android:color/darker_gray" />
 
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginBottom="8dp"
-            android:layout_above="@+id/signature_pad_description"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/signature_pad_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:text="I AGREE the terms and conditions of use."
-            android:textColor="@android:color/darker_gray" />
-
         <com.github.gcacace.signaturepad.views.SignaturePad
+            android:id="@+id/signature_pad"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/signature_pad" />
+            android:layout_height="fill_parent" />
+
     </RelativeLayout>
+
+    <CheckBox
+        android:id="@+id/checkBoxUserAgreement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/buttons_container"
+        android:layout_centerInParent="true"
+        android:padding="4dp"
+        android:text="I AGREE the terms and conditions of user." />
 
     <LinearLayout
         android:id="@+id/buttons_container"
