--- a/app/src/main/res/layout/fragment_home_user.xml
+++ b/app/src/main/res/layout/fragment_home_user.xml
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:layout_weight="1"
-            android:text="Site Id"
+            android:text="Emergency Contact Number"
             android:textAlignment="viewEnd" />
 
         <TextView
