Create layout with checkbox for adverse events.

--- a/app/src/main/res/layout/adverse_events_user_fragment.xml
+++ b/app/src/main/res/layout/adverse_events_user_fragment.xml
@@ -1,13 +1,248 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".ui.user.AdverseEventsUserFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="0dp"
+        android:paddingBottom="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="20dp"
+            android:text="Please select any adverse event you have"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxDryMonth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Dry Month"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxHeadache"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Headache"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxSexualDysfunction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Sexual Dysfunction"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxLossAppetite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Loss Appetite"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxTremer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Tremer"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxConstipation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Constipation"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxDrowsiness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Drowsiness"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxInsomnia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Insomnia"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxGainWeight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Gain Weight"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxPosturalHypertension"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Postural Hypertension"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxUrinaryIncontinence"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Urinary Incontinence"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxDizziness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Dizziness"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxVomitingNausea"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Vomiting Nausea"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxAmenorrhea"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Amenorrhea"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxSweating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Sweating"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxYawning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Yawning"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxRash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Rash"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/checkBoxSedation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Sedation"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+</ScrollView>
