--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".presenter.account.LoginActivity">
 
     <TextView
         android:id="@+id/textViewLogin"
@@ -59,7 +59,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:onClick="logIn"
+        android:onClick="btnLogIn"
         android:padding="12dp"
         android:text="@string/action_login"
         android:textSize="14sp"
