--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presenter.account.LoginActivity">
+    tools:context=".presentation.account.LoginActivity">
 
     <TextView
         android:id="@+id/textViewLogin"
